{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 72,
  "lineage": "2682a6d1-a9a4-8401-0716-cfb90306343b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "roboshop_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-09c813fb71547fc4f",
            "arn": "arn:aws:ec2:us-east-1:877582898965:instance/i-007c6bfc9d06e8254",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-007c6bfc9d06e8254",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0df73d58d7e7befa4"
              }
            ],
            "primary_network_interface_id": "eni-0df73d58d7e7befa4",
            "private_dns": "ip-172-31-26-157.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.26.157",
            "public_dns": "ec2-100-27-232-186.compute-1.amazonaws.com",
            "public_ip": "100.27.232.186",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0486f71786a82924b",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "roboshop_ec2_asg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0260c9ce115520800",
            "tags": {
              "Name": "ops_nginx_prod"
            },
            "tags_all": {
              "Name": "ops_nginx_prod"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02dcaf12680d79d26"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "877582898965",
            "id": "i-007c6bfc9d06e8254",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.roboshop_ec2_sg",
            "data.aws_ami.redhat_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "roboshop_ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:877582898965:security-group/sg-02dcaf12680d79d26",
            "description": "Allowing all inbound and outbound trafiic for ec2 instnaces",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02dcaf12680d79d26",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "roboshop_ec2_asg",
            "name_prefix": "",
            "owner_id": "877582898965",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "roboshop_prod_ec2_asg",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "roboshop_prod_ec2_asg",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-06bb2a129c8a06637"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "877582898965",
            "id": "sg-02dcaf12680d79d26",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_ip4_eg_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:877582898965:security-group-rule/sgr-0dab2ba33bd38ce64",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0dab2ba33bd38ce64",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-02dcaf12680d79d26",
            "security_group_rule_id": "sgr-0dab2ba33bd38ce64",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "877582898965",
            "id": "sgr-0dab2ba33bd38ce64",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.roboshop_ec2_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:877582898965:security-group-rule/sgr-0fa8214ae01697fbd",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0fa8214ae01697fbd",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-02dcaf12680d79d26",
            "security_group_rule_id": "sgr-0fa8214ae01697fbd",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "877582898965",
            "id": "sgr-0fa8214ae01697fbd",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.roboshop_ec2_sg"
          ]
        }
      ]
    }
  ]
}